# knowledge-base

./: .dedup-index.json  .gitignore  .project-index.json  .project-index.md  404.html  AGENTS.md  CLAUDE.md  README.md  codekb-mcp-test-report.md  dashboard-data.js  index.html  index.md  log.md  mkdocs.yml  purpose.md  search.html  sitemap.xml
2026-03-19-07-55-测试MD文件/: index.html
integrations/hermes-opportunity-os/: README.md  mcp_server.py  pyproject.toml
integrations/hermes-opportunity-os/deployment/: README.md
integrations/hermes-opportunity-os/deployment/macos/: com.opportunity-os.dashboard.plist.template
integrations/hermes-opportunity-os/deployment/ngrok/: github-owner-policy.yml.template  ngrok.yml.template
integrations/hermes-opportunity-os/deployment/openclaw/: cron-jobs.json
integrations/hermes-opportunity-os/profile/: SOUL.md  config.yaml
integrations/hermes-opportunity-os/profile/cadence/: biweekly-experiment.md  daily.md  quarterly-zero-base.md  six-week-portfolio.md  weekly.md
integrations/hermes-opportunity-os/skills/opportunity-discovery/: SKILL.md
integrations/hermes-opportunity-os/src/opportunity_os/: __init__.py  cli.py  domain_query.py  errors.py  freshness.py  models.py  proposals.py  reports.py  sanitizer.py  scoring.py  secure_keys.py  signals.py  store.py
integrations/hermes-opportunity-os/tests/: test_cli.py  test_domain_query.py  test_freshness.py  test_mcp_server.py  test_models.py  test_native_boundaries.py  test_reports.py  test_sanitizer.py  test_scoring.py  test_secure_keys.py  test_signals.py  test_skill.py  test_store.py
(+1536 files in other folders)
