[project]
name = "hermes-opportunity-os"
version = "0.1.0"
description = "Deterministic private state and MCP tools for opportunity discovery."
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.18,<2",
  "pydantic>=2.13,<3",
]

[project.scripts]
opportunity-os = "opportunity_os.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.4,<9",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opportunity_os"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
