[project]
name = "hermes-opportunity-os"
version = "0.1.0"
description = "Deterministic private state and MCP tools for opportunity discovery."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "mcp>=1.18,<2",
  "pydantic>=2.13,<3",
  "pyyaml>=6.0,<7",
  "uvicorn>=0.35,<1",
]

[project.scripts]
opportunity-os = "opportunity_os.cli:main"

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opportunity_os"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
